// make sure the download all the necessary proto plugin
// go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
// go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
// run with:
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative JobManager.proto
syntax = "proto3";
option go_package = "./proto";
package proto;

service JobManager {
  rpc Start(JobCreationRequest) returns (Job);
  rpc Stop(JobID) returns (Status);
  rpc Query(JobID) returns (Status);
  rpc List(NilMessage) returns (JobStatusList);
}

message JobCreationRequest {
  string cronExprStr = 1; // Optional cron-style schedule
  string name = 2;
}

message Job {
  string id = 1;
  string name = 2;
}

message JobID {
  string id = 1;
}

message Status {
  string status = 1;  // "Running", "Stopped", or "Error"
  string jobId = 2;
  bool isRunning = 3;
  string errorMessage = 4;  // "Job not found", or ""
}

message JobStatusList {
  repeated Status jobStatusList = 1;
}

message NilMessage {}